chore: add background color for navbar.

--- a/frontend/src/Components/UserNavbar/Navbar.css
+++ b/frontend/src/Components/UserNavbar/Navbar.css
@@ -1,3 +1,6 @@
+nav {
+  background: #fff;
+}
 nav img {
   height: 60px;
   width: auto;
@@ -13,7 +16,7 @@ nav .nav-right .register {
   background-color: #242F9B;
   padding-left: 30px !important;
   padding-right: 30px !important;
-  border-radius: 5px; 
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=Navbar.css.map */
