chore : fixed responsive

--- a/frontend/src/pages/User/Login/Login.scss
+++ b/frontend/src/pages/User/Login/Login.scss
@@ -1,13 +1,15 @@
 #login {
   background: linear-gradient(135deg, #5a64f1 0%, #144560 100%);
-  padding: 400px 0;
+  padding: 200px 0;
 
-  #kolom-utama {
+  #kolom-kiri {
     width: 485px;
     height: 661px;
     left: 485px;
     top: 211px;
     margin-left: 207px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 
     background: #fbfbfb;
     .card {
@@ -23,7 +25,7 @@
           //   line-height: 140.62%;
           /* or 51px */
 
-          padding-top: 10px 0;
+          padding-top: 5px 0;
 
           color: #242f9b;
 
@@ -35,7 +37,6 @@
           font-weight: 500;
           font-size: 20px;
           /* or 28px */
-          padding-top: 50px;
           color: #000000;
         }
         .form-control {
@@ -55,30 +56,43 @@
           /* or 34px */
 
           color: #ffffff;
-        }
-        .btn {
           position: absolute;
-          top: 500px;
+          top: 478px;
           left: 155px;
         }
+        // .btn {
+        //   position: absolute;
+        //   top: 478px;
+        //   left: 155px;
+        // }
         .teks-bawah {
-          font-family: "Rubik";
-          font-style: normal;
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 140.62%;
-          /* or 22px */
-          color: #000000;
-          position: absolute;
-          top: 570px;
-          left: 115px;
+          .form-label-bawah {
+            font-family: "Rubik";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            // line-height: 140.62%;
+            /* or 22px */
+            margin-top: 100px;
+            margin-left: 95px;
+          }
+          .teks-bawah1 {
+            font-family: "Rubik";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            // line-height: 140.62%;
+            /* or 22px */
+          }
         }
       }
     }
   }
-  #kolom-kedua {
+  #kolom-kanan {
     width: 441px;
     height: 661px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 
     background: #ffffff;
     img {
@@ -87,6 +101,23 @@
     }
   }
   @media only screen and (max-width: 600px) {
-    padding-top: 50px;
+    padding-top: 10px;
+    #kolom-kiri {
+      margin-left: 1px;
+    }
+    form {
+      .btn {
+        margin-left: -60px;
+      }
+      .teks-bawah {
+        margin-left: -60px;
+      }
+      .masuk {
+        margin-top: -5px;
+      }
+    }
+    #kolom-kanan {
+      margin-right: 60px;
+    }
   }
 }
