--- a/frontend/src/Components/FormDataProfil/DataProfil.scss
+++ b/frontend/src/Components/FormDataProfil/DataProfil.scss
@@ -1,8 +1,9 @@
 .data-profil {
+  padding: 400px 0;
   .card {
     background: #ffffff;
     border-radius: 11px;
-    margin-top: 196px;
+    margin-top: -15px;
     .card-body {
       .card-title {
         font-family: "PT Sans";
@@ -13,13 +14,32 @@
         /* or 51px */
         color: #242f9b;
         padding-left: 563px;
+        padding-top: 10px;
       }
       .row {
         padding-top: 60px;
-        padding-bottom: 298px;
+        // padding-bottom: 298px;
       }
-      .btn-update {
-        padding-left: 134px;
+      .form-label {
+        font-family: "PT Sans";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 140.62%;
+        /* or 22px */
+
+        color: #000000;
+      }
+      .form-control {
+        background: #d9d9d9;
+      }
+      .form-select {
+        background: #d9d9d9;
+      }
+      .btn-submit {
+        background: #242f9b;
+        border-radius: 2px;
+        width: 100%;
       }
     }
   }
