--- a/frontend/src/pages/User/Register/register.scss
+++ b/frontend/src/pages/User/Register/register.scss
@@ -36,12 +36,13 @@
           font-family: "Rubik";
           font-style: normal;
           font-weight: 500;
-          font-size: 20px;
+          font-size: 18px;
           /* or 28px */
           color: #000000;
         }
         .form-control {
           background: #d9d9d9;
+          border-radius: 10px;
         }
         .btn-daftar {
           background: #242f9b;
@@ -91,7 +92,7 @@
     }
   }
   .watermark {
-    padding-top: 70px;
+    padding-top: 80px;
     // margin-top: 100px;
     .watermark-kiri {
       font-family: "PT Sans";
@@ -126,9 +127,9 @@
     }
   }
   @media only screen and (max-width: 600px) {
-    padding-top: 10px;
+    padding-top: 1px;
     #kolom-utama {
-      margin-left: 1px;
+      margin-left: -2px;
     }
     form {
       .btn {
