--- a/frontend/src/pages/Admin/Dashboard/dashboard.css
+++ b/frontend/src/pages/Admin/Dashboard/dashboard.css
@@ -1,103 +1,53 @@
-* {
-    margin: 0;
+.main-content {
     padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    height: 100vh;
-}
-
-.main {
-    display: flex;
-    height: 100vh;
-}
-
-.sidebar {
-    height: 100%;
-    width: 250px;
-    background-color: #646FD4;
-    color: #fff;
-    flex-shrink: 0;
-}
-
-.container {
-    background-color: whitesmoke;
-    flex-grow: 1;
+    margin: 0;
+    height: 85vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.sidebar {
     height: 100%;
-    width: 100%;
-}
+    width: 250px;
+    background-color: #646FD4;
+    flex-shrink: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 90px 0 0;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    z-index: 99;
+  }
+  
+  @media (max-width: 767.98px) {
+    .sidebar {
+      top: 11.5rem;
+      padding: 0;
+    }
+  }
+  
+  .navbar {
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .1);
+  }
+  
+  @media (min-width: 767.98px) {
+    .navbar {
+      top: 0;
+      position: relative;
+      z-index: 999;
+    }
+  }
+  
+  img {
+    width: 350px;
+    height: 290px;
+  }
 
-.container h1 {
-    font-size: 60px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-.container p {
-    font-size: 25px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.sidebar-item {
-    padding: 15px;
-    display: block;
-    color: #fff;
-}
-
-.sidebar-item:hover {
-    background-color: #242F9B;
-}
-.sidebar-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.sidebar-title span {
-    display: flex;
-}
-.sidebar-title span i {
-    display: inline-block;
-    width: 25px;
-}
-.sidebar-title i {
-    cursor: pointer;
-    transition: transform 0.5s;
-
-    -webkit-transition: transform 0.5s;
-    -moz-transition: transform 0.5s;
-    -ms-transition: transform 0.5s;
-    -o-transition: transform 0.5s;
-}
-.sidebar-item.active .sidebar-title > i {
-    transform: rotate(180deg);
-
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-}
-
-.sidebar-content {
-    padding-top: 10px;
-    height: 0;
-    overflow: hidden;
-    transition: all 0.5s;
-}
-
-.sidebar-item.active .sidebar-content {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.sidebar-content > i {
-    width: 25px;
-    font-size: 14px;
-}
-
+  main .breadcrumb {
+    margin-bottom: 0;
+    margin-left: 20px;
+    padding: 10px;
+  }
