--- a/frontend/src/Components/FormDataProfil/DataProfil.scss
+++ b/frontend/src/Components/FormDataProfil/DataProfil.scss
@@ -1,5 +1,5 @@
 .data-profil {
-  padding: 400px 0;
+  padding: 5rem 0;
   .card {
     background: #ffffff;
     border-radius: 11px;
@@ -34,7 +34,7 @@
         background: #d9d9d9;
       }
       .form-select {
-        background: #d9d9d9;
+        background-color: #d9d9d9;
       }
       .btn-submit {
         background: #242f9b;
