chore: add beasiswa pages

--- a/frontend/src/pages/Admin/Beasiswa/Beasiswa.css
+++ b/frontend/src/pages/Admin/Beasiswa/Beasiswa.css
@@ -1,101 +1,112 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    height: 100vh;
-}
-
-.main {
-    display: flex;
-    height: 100vh;
-}
-
+/* Sidebar */
 .sidebar {
     height: 100%;
     width: 250px;
     background-color: #646FD4;
-    color: #fff;
     flex-shrink: 0;
-}
-
-.container {
-    flex-grow: 1;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 90px 0 0;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    z-index: 99;
+  }
+  
+  @media (max-width: 767.98px) {
+    .sidebar {
+      top: 11.5rem;
+      padding: 0;
+    }
+  }
+  
+  .navbar {
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .1);
+  }
+  
+  @media (min-width: 767.98px) {
+    .navbar {
+      top: 0;
+      position: relative;
+      z-index: 999;
+    }
+  }
+  
+  img {
+    width: 350px;
+    height: 290px;
+  }
+  /* main content */
+  .main-content {
+    padding: 0;
+    margin: 0;
+    height: 85vh;
     display: flex;
     flex-direction: column;
+  }
+  main .breadcrumb {
+    margin-bottom: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
+  }
+  
+  .navbar-brand{
+    font-size: 20px;
+    margin-bottom: 0;
+    margin-left: 10px;
+  }
+  .fa-table{
+    width: 20px;
+    height: 20px;
+  }
+  
+  main .navbar {
+    margin-bottom: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  main .user-setting .navbar {
+    margin-bottom: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  main .data-table {
+    margin-bottom: 0;
+    width: 165vh;
+    font-size: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  }
+  
+  table .table-head{
+    background-color: #646FD4;
+    color: white;
+    text-align: center;
+  }
+  table .table-body{
+    background-color: #fff;
+    color: rgb(17, 15, 15);
+    text-align: center;
     justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
-
-.container h1 {
-    font-size: 60px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-.container p {
-    font-size: 25px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.sidebar-item {
-    padding: 15px;
-    display: block;
-    color: #fff;
-}
-
-.sidebar-item:hover {
-    background-color: #242F9B;
-}
-.sidebar-title {
+  }
+  
+  /* pagination */
+  .pagenav {
+    margin: 20px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.sidebar-title span {
-    display: flex;
-}
-.sidebar-title span i {
-    display: inline-block;
-    width: 25px;
-}
-.sidebar-title i {
-    cursor: pointer;
-    transition: transform 0.5s;
-
-    -webkit-transition: transform 0.5s;
-    -moz-transition: transform 0.5s;
-    -ms-transition: transform 0.5s;
-    -o-transition: transform 0.5s;
-}
-.sidebar-item.active .sidebar-title > i {
-    transform: rotate(180deg);
-
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-}
-
-.sidebar-content {
-    padding-top: 10px;
-    height: 0;
-    overflow: hidden;
-    transition: all 0.5s;
-}
-
-.sidebar-item.active .sidebar-content {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.sidebar-content > i {
-    width: 25px;
-    font-size: 14px;
-}
+    justify-content: flex-end;
+    bottom: 0;
+  }
+  .show-data-table{
+    justify-content: start;
+    font-size: small;
+    font-style: italic;
+    margin-right: 10px;
+  }
+   .pagination .page-item.active{
+    background-color: #646FD4;
+  }
