--- a/frontend/src/pages/User/DaftarBeasiswa/DaftarBeasiswa.scss
+++ b/frontend/src/pages/User/DaftarBeasiswa/DaftarBeasiswa.scss
@@ -7,43 +7,36 @@
   align-items: center;
   justify-content: center;
 }
-
 .prim-btn {
   color: #fff;
   background-color: #242F9B;
   border: 2px solid #242F9B;
   transition: 0.2s ease;
 }
-
 .prim-btn:hover {
   color: #fff;
   background-color: #1d2780;
   transition: 0.5s ease;
 }
-
 .prim-btn:active {
   background-color: #131a58;
   transition: 0.1s ease;
 }
-
 .sec-btn {
   background: #fff;
   color: #242F9B;
   border: 2px solid #242F9B;
   transition: 0.2s ease;
 }
-
 .sec-btn:hover {
   color: #242F9B;
   background: #f1f1f1;
   transition: 0.5s ease;
 }
-
 .sec-btn:active {
   background-color: #e5e5e5;
   transition: 0.1s ease;
 }
-
 .my-btn:focus {
   border: none;
   box-shadow: 0 0 0 5px #24309b7c;
@@ -52,9 +45,7 @@
 
 .daftar-bea-wrapper {
   margin-top: 88px;
+  .daftar-bea-title {
+    padding-top: 30px;
+  }
 }
-.daftar-bea-wrapper .daftar-bea-title {
-  padding-top: 30px;
-}
-
-/*# sourceMappingURL=DaftarBeasiswa.css.map */
