chore:link layout & pages

--- a/frontend/src/Components/UserNavbar/Navbar.css
+++ b/frontend/src/Components/UserNavbar/Navbar.css
@@ -2,27 +2,35 @@
   background: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(12.2px);
   -webkit-backdrop-filter: blur(12.2px);
+  -webkit-transition: 0.6s ease-in;
   transition: 0.6s ease-in;
 }
 
 nav {
+  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
   background: #fff;
 }
+
 nav img {
   height: 60px;
   width: auto;
 }
+
 nav .nav-right li {
   margin: 0 10px;
 }
+
 nav .nav-right .login {
   color: #242F9B;
 }
+
 nav .nav-right .login:hover {
   color: #757dd3;
+  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
+
 nav .nav-right .register {
   color: #fff;
   background-color: #242F9B;
@@ -30,19 +38,25 @@ nav .nav-right .register {
   padding-right: 30px !important;
   border-radius: 5px;
 }
+
 nav .nav-right .register:hover {
   color: #fff;
   background-color: #1d2780;
+  -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
+
 nav .nav-right .register:focus {
   border: none;
-  box-shadow: 0 0 0 5px #24309b7c;
+  -webkit-box-shadow: 0 0 0 5px #24309b7c;
+          box-shadow: 0 0 0 5px #24309b7c;
+  -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
+
 nav .nav-right .prim-btn:focus {
   background-color: #131a58;
+  -webkit-transition: 0.1s ease;
   transition: 0.1s ease;
 }
-
 /*# sourceMappingURL=Navbar.css.map */
