--- a/frontend/src/pages/User/Profil/Profil.css
+++ b/frontend/src/pages/User/Profil/Profil.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Profil.css.map */
+.kolom-data-profil {
+  background: #dbdffd !important;
+}
+/*# sourceMappingURL=Profil.css.map */
