--- a/frontend/src/Components/Sidebar/Sidebar.css
+++ b/frontend/src/Components/Sidebar/Sidebar.css
@@ -68,7 +68,7 @@
     display: inline-flex;
  }
 
- .footer {
+ .footer__sidebar {
     background-color: #646FD4;
     text-align: center;
     left: 50px;
